# strigiutils

./: .krazy  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ConfigureChecks.cmake  Doxyfile  Mainpage.dox  Makefile.am  README  README.win32  SPLIT_TODO  StrigiConfig.cmake.in  TODO  TODO.Phreedom  TODOFILES  TODOMONDAY  archivereader.kdevelop  archivereader.kdevelop.pcs  archivereader.kdevses  checkoutandbuild.sh  cleanindexatts.sh  config.h.cmake  configure.in  rebuild.sh  zzuf.txt
libstreamanalyzer/: CMakeLists.txt  ConfigureChecks.cmake  LibStreamAnalyzer.cmake.in  strigi_thread.h.cmake
libstreamanalyzer/cmake/: FindCLucene1.cmake  FindFFMPEG.cmake
libstreamanalyzer/lib/: CMakeLists.txt  analysisresult.cpp  analyzerconfiguration.cpp  analyzerloader.cpp  analyzerloader.h  classproperties.cpp  config.h.cmake  diranalyzer.cpp  eventthroughanalyzer.cpp  eventthroughanalyzer.h  fieldproperties.cpp  fieldproperties_private.h  fieldpropertiesdb.cpp  fieldtypes.cpp  filelister.cpp  indexpluginloader.cpp  indexreader.cpp  libstreamanalyzer.pc.cmake  lineeventanalyzer.cpp  lineeventanalyzer.h  logging.h  query.cpp  queryparser.cpp  rdfnamespaces.h  saxeventanalyzer.cpp  saxeventanalyzer.h  sha1.cpp  stgdirent.h  streamanalyzer.cpp  streamanalyzerfactory.cpp  streamsaxanalyzer.cpp  strigi_fnmatch.h  variant.cpp  xesamparser.cpp  xesamparser.h
libstreamanalyzer/plugins/: CMakeLists.txt
libstreams/: CMakeLists.txt  ConfigureChecks.cmake  LibStreamsConfig.cmake.in  StrigiConfig.cmake.in
libstreams/lib/: CMakeLists.txt  archiveentrycache.cpp  archiveentrycache.h  archivereader.cpp  arinputstream.cpp  base64inputstream.h  bz2inputstream.cpp  compat.h  config.h.cmake  cpioinputstream.cpp  dataeventinputstream.cpp  dostime.cpp  dostime.h  encodinginputstream.cpp  fileinputstream.cpp  filestreamopener.cpp  gzipcompressstream.h  gzipinputstream.cpp  inputstreamreader.cpp  kmpsearcher.cpp  libstreams.pc.cmake  listinginprogress.cpp  listinginprogress.h  lzmainputstream.cpp  mailinputstream.cpp  mmapfileinputstream.h  oleinputstream.cpp  processinputstream.cpp  rpminputstream.cpp  sdfinputstream.cpp  signatureinputstream.cpp  signatureinputstream.h  skippingbufferedstream.h  skippingfileinputstream.cpp  skippingfileinputstream.h  skippingfileinputstream2.cpp  skippingfileinputstream2.h  stringterminatedsubstream.cpp  subinputstream.cpp  substreamproviderprovider.cpp  (+3 more)
libstreams/tests/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  test.tar
src/archiveengine/: CMakeLists.txt  Makefile.am  archivedirengine.cpp  archivedirengine.h  archiveengine.cpp  archiveengine.h  archiveenginehandler.cpp  archiveenginehandler.h  fsfileinputstream.cpp  fsfileinputstream.h  streamengine.cpp  streamengine.h
src/archivereader/: CMakeLists.txt  archivecat.cpp  archivereader.cpp  archivereader.h  pdf.cpp  pdfparser.cpp  pdfparser.h  pdftest.cpp
src/combinedindexer/: CMakeLists.txt  combinedindexer.cpp  combinedindexmanager.cpp  combinedindexmanager.h  indexer.cpp  tssptr.h
src/daemon/: CMakeLists.txt  Makefile.am  Makefile.in  agent.c  agent.cpp  asyncsocket.cpp  asyncsocket.h  asyncsocketclient.cpp  asyncsocketclient.h  client.cpp  clientinterface.cpp  clientinterface.h  configupdater.cpp  daemon.cpp  daemon.h  daemonconfiguration.cpp  daemonconfiguration.h  daemonconfigurator.cpp  daemonconfigurator.h  filtermanager.cpp  filtermanager.h  filters.cpp  filters.h  indexscheduler.cpp  indexscheduler.h  inotifyevent.cpp  inotifyevent.h  inotifyeventqueue.cpp  inotifyeventqueue.h  inotifymanager.cpp  inotifymanager.h  interface.cpp  interface.h  listbuilder.cpp  server.cpp  server.h  socketclient.cpp  socketclient.h  socketserver.cpp  socketserver.h  (+3 more)
src/diskindexer/: Makefile.am  diskindex.cpp  filelister.cpp  filelister.h
src/dummyindexer/: CMakeLists.txt  Makefile.am  Makefile.in  analyzerlatencytester.cpp  deepfind.cpp  deepgrep.cpp  dummyindexer.cpp  dummyindexwriter.h  grepindexmanager.cpp  grepindexmanager.h  grepindexreader.cpp  grepindexreader.h  grepindexwriter.cpp  grepindexwriter.h  indexer.cpp  indexer.h
src/estraierindexer/: CMakeLists.txt  Makefile.am  estraierindexer.cpp  estraierindexmanager.cpp  estraierindexmanager.h  estraierindexreader.cpp  estraierindexreader.h  estraierindexwriter.cpp  estraierindexwriter.h  indexer.cpp  indexer.h
src/eventlistener/: event.cpp  event.h  eventlistener.cpp  eventlistener.h  inotifylistener.cpp  inotifylistener.h
src/filters/: CMakeLists.txt  filtermanager.cpp  filtermanager.h  filters.cpp  filters.h  fnmatch.cpp  strigi_fnmatch.h
src/htmlgui/: CMakeLists.txt  Makefile.am  kittenhtmlgui.cpp  kittenhtmlgui.h  strigihtmlgui.cpp  strigihtmlgui.cpp.in  strigihtmlgui.h
src/indexertests/: CMakeLists.txt  indexmanagertests.cpp  indexmanagertests.h  indexreadertests.cpp  indexreadertests.h  indexwritertests.cpp  indexwritertests.h  verify.h
src/luceneindexer/: CMakeLists.txt  Makefile.am  PrefixFilter.cpp  PrefixFilter.h  cluceneindexer_export.h  cluceneindexmanager.cpp  cluceneindexmanager.h  cluceneindexreader.cpp  cluceneindexreader.h  cluceneindexwriter.cpp  cluceneindexwriter.h  filelister.cpp  filelister.h  indexer  indexer.cpp  indexer.h  inputstreamreader.cpp  inputstreamreader.h  jsgzipcompressstream.cpp  jsgzipcompressstream.h  luceneindexer.cpp  tcharutils.cpp  tcharutils.h
src/qclient/: CMakeLists.txt  Makefile.am  archivecat.cpp  archivedialog.cpp  archiveenginehandler.cpp  filebrowser.cpp  filebrowser.h  filehandler.cpp  fsfileinputstream.cpp  fsfileinputstream.h
src/searchclient/: .krazy  CMakeLists.txt  Makefile.am  cmdlinekitten.cpp  cmdlinestrigi.cpp  dlgaddfilteringrule.cpp  dlgaddfilteringrule.h  dlgfilters.cpp  dlgfilters.h  dlglistindexedfiles.cpp  dlglistindexedfiles.h  dlgpreferences.cpp  dlgpreferences.h  gtkgui.py  gui.py  histogram.cpp  histogram.h  preferrorpage.cpp  preferrorpage.h  search.pl  (+18 more)
strigiclient/: CMakeLists.txt
strigidaemon/: CMakeLists.txt  LibSearchClient.cmake.in  config.h.cmake
strigiutils/: CMakeLists.txt
test/: CMakeLists.txt  test_runner.cpp
tests/: CMakeLists.txt  test_runner.cpp
(+1312 files in other folders)
