AC_INIT(src/streams/streambase.h)
 
PACKAGE=strigi
VERSION=0.3.0

dnl use libtool with loadable module support
AC_LIBTOOL_DLOPEN
AC_LIBLTDL_CONVENIENCE
AC_PROG_LIBTOOL
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)
AC_CONFIG_SUBDIRS(libltdl)
 
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl check for pkg-config
PKG_PROG_PKG_CONFIG
if test "$PKG_CONFIG" = ""; then
    AC_MSG_ERROR(["You need pkgconfig."]);
fi

dnl check for c++
AC_PROG_CXX

dnl check if Qt gui should be used
AC_ARG_WITH(qt, [  --with-qt               use Qt GUI toolkit ])
if test "$with_qt" = "yes" -o "$enable_qt" = "yes" ; then 
  if test "$withval" = "no" ; then
    with_qt="no"
  else
    with_qt="yes"
  fi
fi

dnl configure QT
QT_REQ_VERSION=4.1.2
dnl Qt has split over multiple libraries, so we must check
dnl for the all the modules we need
PKG_CHECK_MODULES(QtCore, QtCore >= $QT_REQ_VERSION, have_qtcore="yes")
AM_CONDITIONAL(HAVE_QTCORE, test "$have_qtcore" = "yes")
if test "$have_qtcore" = "yes"; then
    QTCORE_CFLAGS=`$PKG_CONFIG --cflags QtCore`
    QTCORE_LIBS=`$PKG_CONFIG --libs QtCore`
    MOC=`$PKG_CONFIG --variable=exec_prefix QtCore`
    AC_CHECK_FILE([$MOC/bin/moc-qt4],
        MOC="$MOC/bin/moc-qt4",
        MOC="$MOC/bin/moc")
    AC_SUBST(QTCORE_CFLAGS)
    AC_SUBST(QTCORE_LIBS)
    AC_SUBST(MOC)
fi
PKG_CHECK_MODULES(QtGui, QtGui >= $QT_REQ_VERSION, have_qtgui="yes")
AM_CONDITIONAL(HAVE_QTGUI, test "$have_qtgui" = "yes")
if test "$have_qtgui" = "yes"; then
    QTGUI_CFLAGS=`$PKG_CONFIG --cflags QtGui`
    QTGUI_LIBS=`$PKG_CONFIG --libs QtGui`
    AC_SUBST(QTGUI_CFLAGS)
    AC_SUBST(QTGUI_LIBS)
fi
PKG_CHECK_MODULES(QtTest, QtTest >= $QT_REQ_VERSION, have_qttest="yes")
AM_CONDITIONAL(HAVE_QTTEST, test "$have_qttest" = "yes")
if test "$have_qttest" = "yes"; then
    QTTEST_CFLAGS=`$PKG_CONFIG --cflags QtTest`
    QTTEST_LIBS=`$PKG_CONFIG --libs QtTest`
    AC_SUBST(QTTEST_CFLAGS)
    AC_SUBST(QTTEST_LIBS)
fi

dnl check for dbus
PKG_CHECK_MODULES(dbus, dbus, have_dbus="yes", have_openssl="no")
AM_CONDITIONAL(HAVE_DBUS, test "$have_dubs" = "yes")

dnl check for openssl
PKG_CHECK_MODULES(openssl, openssl >= 0, have_openssl="yes", have_openssl="no")
AM_CONDITIONAL(HAVE_OPENSSL, test "$have_openssl" = "yes")

dnl check for magic
AC_CHECK_HEADER(magic.h, , AC_MSG_ERROR(["You need magic.h from file-devel."]))

dnl check for CLucene
ACX_CLUCENE
AM_CONDITIONAL(HAVE_CLUCENE, test "yes" = "yes")

dnl check for xapian
AC_PATH_PROG(XAPIAN_CONFIG, xapian-config, no)
AM_CONDITIONAL(HAVE_XAPIAN, test "$XAPIAN_CONFIG" != "no")
LIBXAPIAN=`$XAPIAN_CONFIG --libs`
# Workaround for problem in xapian-config in some versions: wrongly lists
# libstdc++.la in the lib list
for i in $LIBXAPIAN ; do
    case $i in
    *libstdc++.la);;
    *) tmpxaplib="$tmpxaplib $i";;
    esac
done
LIBXAPIAN=$tmpxaplib
XAPIANCXXFLAGS=`$XAPIAN_CONFIG --cxxflags`

dnl check for estraier
AC_PATH_PROG(ESTRAIER_CONFIG, estconfig, no)
AM_CONDITIONAL(HAVE_ESTRAIER, test "$ESTRAIER_CONFIG" != "no")
if test "$ESTRAIER_CONFIG" != "no"; then
    ESTRAIERLDFLAGS=`$ESTRAIER_CONFIG --ldflags`
    AC_SUBST(ESTRAIERLDFLAGS)
    ESTRAIERLIBS=`$ESTRAIER_CONFIG --libs`
    AC_SUBST(ESTRAIERLIBS)
    ESTRAIERCFLAGS=`$ESTRAIER_CONFIG --cflags`
    AC_SUBST(ESTRAIERCFLAGS)
fi

dnl check for slqlite3
PKG_CHECK_MODULES(sqlite3, sqlite3 >= 0, have_sqlite3="yes", have_sqlite3="no")
AM_CONDITIONAL(HAVE_SQLITE, test "$have_sqlite3" = "yes")

dnl check for sys_ioprio_set
dnl AC_CHECK_HEADER(linux/ioprio.h, [have_linuxioprio=yes], )
AM_CONDITIONAL(HAVE_LINUXIOPRIO, test "$have_linuxioprio" = "yes")

dnl check for iconv
AM_ICONV

AC_OUTPUT(Makefile \
	src/Makefile \
	src/streams/Makefile \
        src/streams/tests/Makefile \
        src/streamindexer/Makefile \
	src/streamindexer/throughplugins/Makefile \
        src/luceneindexer/Makefile \
        src/sqliteindexer/Makefile \
        src/estraierindexer/Makefile \
        src/xapianindexer/Makefile \
        src/dummyindexer/Makefile \
        src/daemon/Makefile \
        src/archiveengine/Makefile \
        src/archiveengine/tests/Makefile \
        src/searchclient/Makefile \
        src/htmlgui/Makefile \
        src/qclient/Makefile )
